unpackaged/main/default/objects/Dynamic_QuickAction_Layout__mdt/Dynamic_QuickAction_Layout__mdt.object-meta.xml
<CustomObject>
    <label>Dynamic QuickAction Layout</label>
    <pluralLabel>Dynamic QuickAction Layouts</pluralLabel>
</CustomObject>