unpackaged/main/default/objects/Dynamic_QuickAction_Layout__mdt/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <description>Object API name</description>
    <label>object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>