unpackaged/main/default/objects/Dynamic_QuickAction_Layout__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <type>TextArea</type>
</CustomField>