unpackaged/main/default/objects/Dynamic_QuickAction_Layout__mdt/fields/Section_and_Fieldset__c.field-meta.xml
<CustomField>
    <fullName>Section_and_Fieldset__c</fullName>
    <description>section name: fieldset API ,section name: fieldset API</description>
    <label>Section and Fieldset</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>